[gd_scene load_steps=24 format=2]

[ext_resource path="res://SmallWindow.gd" type="Script" id=1]
[ext_resource path="res://closeBox.png" type="Texture" id=2]
[ext_resource path="res://paintProgramEmpty2.png" type="Texture" id=3]
[ext_resource path="res://closeBoxHover.png" type="Texture" id=4]
[ext_resource path="res://closeBoxPressed.png" type="Texture" id=5]
[ext_resource path="res://infoBox.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Born2bSportyV10.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://infoTextBox.png" type="Texture" id=8]
[ext_resource path="res://infoBoxHover.png" type="Texture" id=9]
[ext_resource path="res://ColorRect.gd" type="Script" id=10]
[ext_resource path="res://actualWindow.gd" type="Script" id=11]
[ext_resource path="res://Trashcan.png" type="Texture" id=12]
[ext_resource path="res://Trashcan_Hover.png" type="Texture" id=13]
[ext_resource path="res://redPaintBrushHover.png" type="Texture" id=14]
[ext_resource path="res://bluePaintBrush.png" type="Texture" id=15]
[ext_resource path="res://whitePaintBrushHover.png" type="Texture" id=16]
[ext_resource path="res://whitePaintBrush.png" type="Texture" id=17]
[ext_resource path="res://blackPaintBrush.png" type="Texture" id=18]
[ext_resource path="res://bluePaintBrushHover.png" type="Texture" id=19]
[ext_resource path="res://blackPaintBrushHover.png" type="Texture" id=20]
[ext_resource path="res://redPaintBrush.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]
size = 38
extra_spacing_top = 2
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 29
outline_size = 1
font_data = ExtResource( 7 )

[node name="PaintProgram" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 840.0
margin_bottom = -840.0
rect_min_size = Vector2( 1920, 1080 )
script = ExtResource( 1 )

[node name="actualWindow" type="TextureRect" parent="."]
margin_left = 400.0
margin_top = 200.0
margin_right = 1480.0
margin_bottom = 920.0
rect_min_size = Vector2( 1080, 720 )
texture = ExtResource( 3 )
script = ExtResource( 11 )

[node name="Label" type="Label" parent="actualWindow"]
margin_left = 87.0
margin_top = 6.0
margin_right = 241.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "Paint.exe"

[node name="drawingWindow" type="ColorRect" parent="actualWindow"]
margin_left = 101.0
margin_top = 72.0
margin_right = 979.0
margin_bottom = 550.0
script = ExtResource( 10 )

[node name="deleteArt" type="TextureButton" parent="actualWindow"]
margin_left = 932.0
margin_top = 583.0
margin_right = 1027.0
margin_bottom = 677.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
expand = true

[node name="exitWindow" type="TextureButton" parent="actualWindow"]
margin_left = 1012.0
margin_top = 5.0
margin_right = 1058.0
margin_bottom = 49.0
size_flags_horizontal = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true

[node name="displayInfo" type="TextureButton" parent="actualWindow"]
margin_left = 20.0
margin_top = 4.0
margin_right = 65.0
margin_bottom = 49.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 9 )
expand = true

[node name="blackPaint" type="TextureButton" parent="actualWindow"]
margin_left = 100.0
margin_top = 583.0
margin_right = 173.0
margin_bottom = 656.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 20 )
expand = true

[node name="bluePaint" type="TextureButton" parent="actualWindow"]
margin_left = 238.0
margin_top = 583.0
margin_right = 311.0
margin_bottom = 656.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 19 )
expand = true

[node name="redPaint" type="TextureButton" parent="actualWindow"]
margin_left = 306.0
margin_top = 583.0
margin_right = 379.0
margin_bottom = 656.0
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
expand = true

[node name="whitePaint" type="TextureButton" parent="actualWindow"]
margin_left = 168.0
margin_top = 583.0
margin_right = 241.0
margin_bottom = 656.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
expand = true

[node name="information" type="TextureRect" parent="actualWindow"]
visible = false
margin_left = 60.0
margin_top = 66.0
margin_right = 260.0
margin_bottom = 166.0
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="actualWindow/information"]
margin_left = 6.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "This is the paint program!"
autowrap = true

[connection signal="gui_input" from="actualWindow" to="actualWindow" method="_on_actualWindow_gui_input"]
[connection signal="mouse_entered" from="actualWindow/drawingWindow" to="actualWindow/drawingWindow" method="_on_drawingWindow_mouse_entered"]
[connection signal="mouse_exited" from="actualWindow/drawingWindow" to="actualWindow/drawingWindow" method="_on_drawingWindow_mouse_exited"]
[connection signal="pressed" from="actualWindow/deleteArt" to="actualWindow/drawingWindow" method="_on_deleteArt_pressed"]
[connection signal="pressed" from="actualWindow/exitWindow" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="actualWindow/displayInfo" to="." method="_on_info_pressed"]
[connection signal="pressed" from="actualWindow/blackPaint" to="actualWindow/drawingWindow" method="_on_blackPaint_pressed"]
[connection signal="pressed" from="actualWindow/bluePaint" to="actualWindow/drawingWindow" method="_on_bluePaint_pressed"]
[connection signal="pressed" from="actualWindow/redPaint" to="actualWindow/drawingWindow" method="_on_redPaint_pressed"]
[connection signal="pressed" from="actualWindow/whitePaint" to="actualWindow/drawingWindow" method="_on_whitePaint_pressed"]
